# eagleye-artificialeye

./: CMakeLists.txt  README.md  audio.cpp  audio.h  camera.cpp  camera.h  config.json  eagleye  hud.cpp  hud.h  kalman_tracker.cpp  kalman_tracker.h  main.cpp  optical_flow.cpp  optical_flow.h  optical_flow_tab.cpp  pose.cpp  pose.h  saliency.cpp  saliency.h  saliency_stub.cpp  tab_scanner.cpp  tab_scanner.h  tracker.cpp  tracker.h  trajectory.cpp  trajectory.h  vad.cpp  vad.h  websocket_client.cpp  websocket_client.h
